examples/azure-service-mesh/security/cert-manager-letsencrypt/cluster-issuer.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
